# GALAHAD

./: meson.build  meson_options.txt
.github/julia/: build_tarballs.jl  generate_binaries.jl
.github/workflows/: release.yml  standalone.yml
src/amd/: meson.build
src/ampl/: meson.build
