libgalahad_src += files('wrap_cqp.f90')
libgalahad_src += files('wrap_presolve.f90')
libgalahad_src += files('wrap_qpc.f90')
libgalahad_src += files('wrap_filtrane.f90')
libgalahad_src += files('wrap_qpa.f90')
libgalahad_src += files('wrap_qp.f90')
libgalahad_src += files('wrap_bqp.f90')
libgalahad_src += files('wrap_lancelot.f90')
libgalahad_src += files('wrap_qpb.f90')
